--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.13.4",
     "jquery": "^2.2.0",
     "mongodb": "^2.1.7",
+    "mongoose": "^4.4.4",
     "phantom": "^2.0.0-alpha.4",
     "request": "^2.69.0",
     "request-promise": "^2.0.1"
